resources/file/springStartMonitor/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-start-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-start-monitor
  template:
    metadata:
      labels:
        app: spring-start-monitor
    spec:
      containers:
        - name: spring-start-monitor
          image: 746744850355.dkr.ecr.ap-southeast-1.amazonaws.com/spring-start-monitor:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 200m
              memory: 500Mi
            limits:
              cpu: 1000m
              memory: 2000Mi
---
apiVersion: v1
kind: Service
metadata:
  name: spring-start-monitor
spec:
  selector:
    app: spring-start-monitor
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-start-monitor-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/hostname: api-admin-dev-sg.wasai-app.com
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 30m
spec:
  rules:
    - host: api-admin-dev-sg.wasai-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-start-monitor
                port:
                  number: 8080
